--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "binance-proxy",
-  "version": "1.0.0",
+  "name": "binance-proxy-node",
+  "version": "0.1.0",
   "main": "index.js",
-  "type": "module",
-  "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
-  },
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
