--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "binance-proxy-node",
-  "version": "0.1.0",
+  "name": "binance-proxy-railway",
+  "version": "1.0.0",
+  "description": "Binance Proxy Node.js for Google Sheets with 60s cache",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "YourName",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
+    "node-fetch": "^2.6.12"
   }
 }
