--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "binance-proxy-railway",
+  "name": "binance-proxy",
   "version": "1.0.0",
-  "description": "Binance Proxy Node.js for Google Sheets with 60s cache",
+  "description": "Proxy server for Binance API to use in Google Sheets",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "YourName",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^2.6.12"
+    "node-fetch": "^3.3.2",
+    "node-cache": "^5.1.2"
   }
 }
