--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "binance-proxy",
   "version": "1.0.0",
-  "description": "Proxy server for Binance API to use in Google Sheets",
+  "description": "Simple Binance Proxy for Google Sheets",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
+    "cors": "^2.8.5",
     "node-cache": "^5.1.2"
   }
 }
