--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "binance-proxy",
+  "name": "binance-proxy-for-gsheets",
   "version": "1.0.0",
-  "description": "Simple Binance Proxy for Google Sheets",
+  "description": "Proxy to safely call Binance API from Google Sheets",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5",
-    "node-cache": "^5.1.2"
+    "axios": "^1.6.0",
+    "crypto": "^1.0.1",
+    "express": "^4.18.2"
   }
 }
