--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "binance-proxy-for-gsheets",
+  "name": "binance-proxy",
   "version": "1.0.0",
-  "description": "Proxy to safely call Binance API from Google Sheets",
   "main": "index.js",
+  "type": "module",
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
+  },
   "scripts": {
     "start": "node index.js"
-  },
-  "dependencies": {
-    "axios": "^1.6.0",
-    "crypto": "^1.0.1",
-    "express": "^4.18.2"
   }
 }
